# gemm

./: .gitignore  .gitmodules  README.md  matrix.c  matrix.f90  matrix.h
gemm_c/: matrix.c  matrix.h
gemm_fort/: CMakeLists.txt  matrix.c  matrix.f90
gemm_py/: CMakeLists.txt  matrix.cc  run_matrix.py
